--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -18,67 +18,109 @@
             android:layout_height="@dimen/profile_picture_size"
             android:layout_gravity="center"
             android:src="@drawable/ic_launcher_background"
-            app:civ_border_color="@color/white"
+            app:civ_border_color="@color/blueOrchid"
             app:civ_border_width="@dimen/border_size" />
 
-        <EditText
-            android:id="@+id/email"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/emailLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
-            android:layout_marginTop="@dimen/welcome_screen_button_margin"
-            android:layout_marginBottom="@dimen/welcome_screen_text_icon_margin"
-            android:autofillHints="emailAddress"
-            android:hint="@string/email"
-            android:inputType="textEmailAddress" />
+            android:hint="@string/email">
 
-        <EditText
-            android:id="@+id/firstName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
-            android:layout_marginBottom="@dimen/welcome_screen_text_icon_margin"
-            android:autofillHints="name"
-            android:hint="@string/first_name"
-            android:inputType="text" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
+                android:layout_marginTop="@dimen/welcome_screen_button_margin"
+                android:layout_marginBottom="@dimen/welcome_screen_text_icon_margin"
+                android:autofillHints="emailAddress"
+                android:inputType="textEmailAddress" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <EditText
-            android:id="@+id/lastName"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/firstNameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
-            android:layout_marginBottom="@dimen/welcome_screen_text_icon_margin"
-            android:autofillHints="name"
-            android:hint="@string/last_name"
-            android:inputType="text" />
+            android:hint="@string/first_name">
 
-        <EditText
-            android:id="@+id/mobile"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
-            android:layout_marginBottom="@dimen/welcome_screen_text_icon_margin"
-            android:autofillHints="phone"
-            android:hint="@string/mobile_no"
-            android:inputType="phone" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/firstName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
+                android:layout_marginBottom="@dimen/welcome_screen_text_icon_margin"
+                android:autofillHints="name"
+                android:inputType="text" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <EditText
-            android:id="@+id/password"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/lastNameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
-            android:autofillHints="password"
-            android:hint="@string/password"
-            android:inputType="textPassword" />
+            android:hint="@string/last_name">
 
-        <EditText
-            android:id="@+id/confirmPassword"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/lastName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
+                android:layout_marginBottom="@dimen/welcome_screen_text_icon_margin"
+                android:autofillHints="name"
+                android:inputType="text" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mobileLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
-            android:autofillHints="password"
-            android:hint="@string/confirm_password"
-            android:inputType="textPassword" />
+            android:hint="@string/mobile_no">
+
+            <EditText
+                android:id="@+id/mobile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
+                android:layout_marginBottom="@dimen/welcome_screen_text_icon_margin"
+                android:autofillHints="phone"
+                android:inputType="phone" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/passwordLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
+            app:passwordToggleEnabled="true">
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
+                android:layout_marginBottom="@dimen/welcome_screen_text_icon_margin"
+                android:autofillHints="password"
+                android:hint="@string/password"
+                android:inputType="textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/confirmPasswordLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
+            app:passwordToggleEnabled="true">
+
+            <EditText
+                android:id="@+id/confirmPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
+                android:autofillHints="password"
+                android:hint="@string/confirm_password"
+                android:inputType="textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/forgotPassword"
@@ -88,8 +130,7 @@
             android:layout_marginTop="@dimen/welcome_screen_text_icon_margin"
             android:layout_marginEnd="@dimen/signup_screen_login_text_margin"
             android:clickable="true"
-            android:text="@string/already_have_an_account_log_in"
-            android:textColor="@color/black" />
+            android:text="@string/already_have_an_account_log_in" />
 
         <Button
             android:id="@+id/signUpButton"
