--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+    <!-- Base application theme for dark mode. -->
     <style name="Theme.ChatChat" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
@@ -12,5 +12,21 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <!-- Navigation bar color. -->
+        <item name="android:navigationBarColor">?attr/colorPrimary</item>
+        <!-- Window background color. -->
+        <item name="android:windowBackground">@color/black</item>
+        <!-- Text color. -->
+        <item name="android:textColor">@color/white</item>
+        <!-- Text color for secondary text, such as hints or disabled views. -->
+        <item name="android:textColorSecondary">@color/gray</item>
+        <!-- Icon color. -->
+        <item name="colorOnSurface">@color/white</item>
+        <!-- Surface color. -->
+        <item name="colorSurface">@color/darkGray</item>
+        <!-- Default card background color. -->
+        <item name="android:colorBackground">@color/darkGray</item>
+        <!-- Ripple color. -->
+        <item name="colorControlHighlight">@color/white</item>
     </style>
 </resources>
