--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,373 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="lightYellow">#FFFFE0</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="snow">#FFFAFA</color>
+    <color name="floralWhite">#FFFAF0</color>
+    <color name="lemonChiffon">#FFFACD</color>
+    <color name="cornSilk">#FFF8DC</color>
+    <color name="seaShell">#FFF5EE</color>
+    <color name="lavenderBlush">#FFF0F5</color>
+    <color name="papayaWhip">#FFEFD5</color>
+    <color name="blanchedAlmond">#FFEBCD</color>
+    <color name="mistyRose">#FFE4E1</color>
+    <color name="bisque">#FFE4C4</color>
+    <color name="moccasin">#FFE4B5</color>
+    <color name="navajoWhite">#FFDEAD</color>
+    <color name="peachPuff">#FFDAB9</color>
+    <color name="gold">#FFD700</color>
+    <color name="pink">#FFC0CB</color>
+    <color name="lightPink">#FFB6C1</color>
+    <color name="orange">#FFA500</color>
+    <color name="lightSalmon">#FFA07A</color>
+    <color name="darkOrange">#FF8C00</color>
+    <color name="coral">#FF7F50</color>
+    <color name="hotPink">#FF69B4</color>
+    <color name="tomato">#FF6347</color>
+    <color name="orangeRed">#FF4500</color>
+    <color name="deepPink">#FF1493</color>
+    <color name="fuchsia">#FF00FF</color>
+    <color name="magenta">#FF00FF</color>
+    <color name="red">#FF0000</color>
+    <color name="oldLace">#FDF5E6</color>
+    <color name="lightGoldenrodYellow">#FAFAD2</color>
+    <color name="linen">#FAF0E6</color>
+    <color name="antiqueWhite">#FAEBD7</color>
+    <color name="salmon">#FA8072</color>
+    <color name="ghostWhite">#F8F8FF</color>
+    <color name="mintCream">#F5FFFA</color>
+    <color name="whiteSmoke">#F5F5F5</color>
+    <color name="beige">#F5F5DC</color>
+    <color name="wheat">#F5DEB3</color>
+    <color name="sandyBrown">#F4A460</color>
+    <color name="azure">#F0FFFF</color>
+    <color name="honeydew">#F0FFF0</color>
+    <color name="aliceBlue">#F0F8FF</color>
+    <color name="khaki">#F0E68C</color>
+    <color name="lightCoral">#F08080</color>
+    <color name="paleGoldenrod">#EEE8AA</color>
+    <color name="violet">#EE82EE</color>
+    <color name="darkSalmon">#E9967A</color>
+    <color name="lavender">#E6E6FA</color>
+    <color name="lightCyan">#E0FFFF</color>
+    <color name="burlyWood">#DEB887</color>
+    <color name="plum">#DDA0DD</color>
+    <color name="crimson">#DC143C</color>
+    <color name="paleVioletRed">#DB7093</color>
+    <color name="goldenrod">#DAA520</color>
+    <color name="orchid">#DA70D6</color>
+    <color name="thistle">#D8BFD8</color>
+    <color name="lightGrey">#D3D3D3</color>
+    <color name="tan">#D2B48C</color>
+    <color name="chocolate">#D2691E</color>
+    <color name="peru">#CD853F</color>
+    <color name="indianRed">#CD5C5C</color>
+    <color name="mediumVioletRed">#C71585</color>
+    <color name="silver">#C0C0C0</color>
+    <color name="darkKhaki">#BDB76B</color>
+    <color name="rosyBrown">#BC8F8F</color>
+    <color name="mediumOrchid">#BA55D3</color>
+    <color name="darkGoldenrod">#B8860B</color>
+    <color name="fireBrick">#B22222</color>
+    <color name="powderBlue">#B0E0E6</color>
+    <color name="paleTurquoise">#AFEEEE</color>
+    <color name="greenYellow">#ADFF2F</color>
+    <color name="lightBlue">#ADD8E6</color>
+    <color name="darkGray">#A9A9A9</color>
+    <color name="brown">#A52A2A</color>
+    <color name="sienna">#A0522D</color>
+    <color name="yellowGreen">#9ACD32</color>
+    <color name="darkOrchid">#9932CC</color>
+    <color name="paleGreen">#98FB98</color>
+    <color name="darkViolet">#9400D3</color>
+    <color name="mediumPurple">#9370DB</color>
+    <color name="lightGreen">#90EE90</color>
+    <color name="darkSeaGreen">#8FBC8F</color>
+    <color name="saddleBrown">#8B4513</color>
+    <color name="darkMagenta">#8B008B</color>
+    <color name="darkRed">#8B0000</color>
+    <color name="blueViolet">#8A2BE2</color>
+    <color name="lightSkyBlue">#87CEFA</color>
+    <color name="skyBlue">#87CEEB</color>
+    <color name="gray">#808080</color>
+    <color name="olive">#808000</color>
+    <color name="purple">#800080</color>
+    <color name="maroon">#800000</color>
+    <color name="aquamarine">#7FFFD4</color>
+    <color name="chartreuse">#7FFF00</color>
+    <color name="lawnGreen">#7CFC00</color>
+    <color name="mediumSlateBlue">#7B68EE</color>
+    <color name="lightSlateGray">#778899</color>
+    <color name="slateGray">#708090</color>
+    <color name="oliveDrab">#6B8E23</color>
+    <color name="slateBlue">#6A5ACD</color>
+    <color name="dimGray">#696969</color>
+    <color name="mediumAquamarine">#66CDAA</color>
+    <color name="cornflowerBlue">#6495ED</color>
+    <color name="cadetBlue">#5F9EA0</color>
+    <color name="darkOliveGreen">#556B2F</color>
+    <color name="indigo">#4B0082</color>
+    <color name="mediumTurquoise">#48D1CC</color>
+    <color name="darkSlateBlue">#483D8B</color>
+    <color name="steelBlue">#4682B4</color>
+    <color name="royalBlue">#4169E1</color>
+    <color name="turquoise">#40E0D0</color>
+    <color name="mediumSeaGreen">#3CB371</color>
+    <color name="limeGreen">#32CD32</color>
+    <color name="darkSlateGray">#2F4F4F</color>
+    <color name="seaGreen">#2E8B57</color>
+    <color name="forestGreen">#228B22</color>
+    <color name="lightSeaGreen">#20B2AA</color>
+    <color name="dodgerBlue">#1E90FF</color>
+    <color name="midnightBlue">#191970</color>
+    <color name="aqua">#00FFFF</color>
+    <color name="cyan">#00FFFF</color>
+    <color name="springGreen">#00FF7F</color>
+    <color name="lime">#00FF00</color>
+    <color name="mediumSpringGreen">#00FA9A</color>
+    <color name="darkTurquoise">#00CED1</color>
+    <color name="deepSkyBlue">#00BFFF</color>
+    <color name="darkCyan">#008B8B</color>
+    <color name="teal">#008080</color>
+    <color name="green">#008000</color>
+    <color name="darkGreen">#006400</color>
+    <color name="blue">#0000FF</color>
+    <color name="mediumBlue">#0000CD</color>
+    <color name="darkBlue">#00008B</color>
+    <color name="navy">#000080</color>
+    <color name="black">#000000</color>
+    <color name="blackCat">#413839</color>
+    <color name="blackEel">#463E3F</color>
+    <color name="blackCow">#4C4646</color>
+    <color name="grayWolf">#504A4B</color>
+    <color name="vampireGray">#565051</color>
+    <color name="grayDolphin">#5C5858</color>
+    <color name="carbonGray">#625D5D</color>
+    <color name="ashGray">#666362</color>
+    <color name="cloudyGray">#6D6968</color>
+    <color name="smokeyGray">#726E6D</color>
+    <color name="battleshipGray">#848482</color>
+    <color name="grayCloud">#B6B6B4</color>
+    <color name="grayGoose">#D1D0CE</color>
+    <color name="metallicSilver">#BCC6CC</color>
+    <color name="blueGray">#98AFC7</color>
+    <color name="jetGray">#616D7E</color>
+    <color name="mistBlue">#646D7E</color>
+    <color name="marbleBlue">#566D7E</color>
+    <color name="blueJay">#2B547E</color>
+    <color name="navyBlue">#000080</color>
+    <color name="blueWhale">#342D7E</color>
+    <color name="earthBlue">#0000A0</color>
+    <color name="cobaltBlue">#0020C2</color>
+    <color name="blueberryBlue">#0041C2</color>
+    <color name="sapphireBlue">#2554C7</color>
+    <color name="blueEyes">#1569C7</color>
+    <color name="blueOrchid">#1F45FC</color>
+    <color name="blueLotus">#6960EC</color>
+    <color name="lightSlateBlue">#736AFF</color>
+    <color name="silkBlue">#488AC7</color>
+    <color name="blueIvy">#3090C7</color>
+    <color name="blueKoi">#659EC7</color>
+    <color name="columbiaBlue">#87AFC7</color>
+    <color name="babyBlue">#95B9C7</color>
+    <color name="lightSteelBlue">#728FCE</color>
+    <color name="blueRibbon">#306EFF</color>
+    <color name="blueDress">#157DEC</color>
+    <color name="butterflyBlue">#38ACEC</color>
+    <color name="granite">#837E7C</color>
+    <color name="platinum">#E5E4E2</color>
+    <color name="lueLotus">#6960EC</color>
+    <color name="oceanBlue">#2B65EC</color>
+    <color name="iceberg">#56A5EC</color>
+    <color name="denimBlue">#79BAEC</color>
+    <color name="jeansBlue">#A0CFEC</color>
+    <color name="blueAngel">#B7CEEC</color>
+    <color name="pastelBlue">#B4CFEC</color>
+    <color name="seaBlue">#C2DFFF</color>
+    <color name="coralBlue">#AFDCEC</color>
+    <color name="robinEggBlue">#BDEDFF</color>
+    <color name="paleBlueLily">#CFECEC</color>
+    <color name="water">#EBF4FA</color>
+    <color name="lightSlate">#CCFFFF</color>
+    <color name="lightAquamarine">#93FFE8</color>
+    <color name="electricBlue">#9AFEFF</color>
+    <color name="tronBlue">#7DFDFE</color>
+    <color name="blueZircon">#57FEFF</color>
+    <color name="blueLagoon">#8EEBEC</color>
+    <color name="celeste">#50EBEC</color>
+    <color name="blueDiamond">#4EE2EC</color>
+    <color name="tiffanyBlue">#81D8D0</color>
+    <color name="cyanOpaque">#92C7C7</color>
+    <color name="northernLightsBlue">#78C7C7</color>
+    <color name="jellyfish">#46C7C7</color>
+    <color name="seaTurtleGreen">#438D80</color>
+    <color name="greenishBlue">#307D7E</color>
+    <color name="grayishTurquoise">#5E7D7E</color>
+    <color name="beetleGreen">#4C787E</color>
+    <color name="camouflageGreen">#78866B</color>
+    <color name="hazelGreen">#617C58</color>
+    <color name="venomGreen">#728C00</color>
+    <color name="fernGreen">#667C26</color>
+    <color name="darkForrestGreen">#254117</color>
+    <color name="mediumForestGreen">#347235</color>
+    <color name="seaweedGreen">#437C17</color>
+    <color name="pineGreen">#387C44</color>
+    <color name="jungleGreen">#347C2C</color>
+    <color name="shamrockGreen">#347C17</color>
+    <color name="greenOnion">#6AA121</color>
+    <color name="cloverGreen">#3EA055</color>
+    <color name="greenSnake">#6CBB3C</color>
+    <color name="alienGreen">#6CC417</color>
+    <color name="greenApple">#4CC417</color>
+    <color name="kellyGreen">#4CC552</color>
+    <color name="zombieGreen">#54C571</color>
+    <color name="frogGreen">#99C68E</color>
+    <color name="greenPeas">#89C35C</color>
+    <color name="dollarBillGreen">#85BB65</color>
+    <color name="iguanaGreen">#9CB071</color>
+    <color name="avocadoGreen">#B2C248</color>
+    <color name="pistachioGreen">#9DC209</color>
+    <color name="saladGreen">#A1C935</color>
+    <color name="hummingbirdGreen">#7FE817</color>
+    <color name="nebulaGreen">#59E817</color>
+    <color name="stoplightGoGreen">#57E964</color>
+    <color name="algaeGreen">#64E986</color>
+    <color name="jadeGreen">#5EFB6E</color>
+    <color name="emeraldGreen">#5FFB17</color>
+    <color name="dragonGreen">#6AFB92</color>
+    <color name="mintGreen">#98FF98</color>
+    <color name="greenThumb">#B5EAAA</color>
+    <color name="lightJade">#C3FDB8</color>
+    <color name="teaGreen">#CCFB5D</color>
+    <color name="slimeGreen">#BCE954</color>
+    <color name="harvestGold">#EDE275</color>
+    <color name="sunYellow">#FFE87C</color>
+    <color name="cornYellow">#FFF380</color>
+    <color name="parchment">#FFFFC2</color>
+    <color name="cream">#FFFFCC</color>
+    <color name="vanilla">#F3E5AB</color>
+    <color name="tanBrown">#ECE5B6</color>
+    <color name="peach">#FFE5B4</color>
+    <color name="mustard">#FFDB58</color>
+    <color name="rubberDuckyYellow">#FFD801</color>
+    <color name="brightGold">#FDD017</color>
+    <color name="goldenBrown">#EAC117</color>
+    <color name="saffron">#FBB917</color>
+    <color name="beer">#FBB117</color>
+    <color name="cantaloupe">#FFA62F</color>
+    <color name="beeYellow">#E9AB17</color>
+    <color name="brownSugar">#E2A76F</color>
+    <color name="deepPeach">#FFCBA4</color>
+    <color name="gingerBrown">#C9BE62</color>
+    <color name="schoolBusYellow">#E8A317</color>
+    <color name="fallLeafBrown">#C8B560</color>
+    <color name="sand">#C2B280</color>
+    <color name="cookieBrown">#C7A317</color>
+    <color name="caramel">#C68E17</color>
+    <color name="brass">#B5A642</color>
+    <color name="camelBrown">#C19A6B</color>
+    <color name="bronze">#CD7F32</color>
+    <color name="tigerOrange">#C88141</color>
+    <color name="cinnamon">#C58917</color>
+    <color name="copper">#B87333</color>
+    <color name="wood">#966F33</color>
+    <color name="oakBrown">#806517</color>
+    <color name="armyBrown">#827B60</color>
+    <color name="sandstone">#786D5F</color>
+    <color name="mocha">#493D26</color>
+    <color name="taupe">#483C32</color>
+    <color name="coffee">#6F4E37</color>
+    <color name="brownBear">#835C3B</color>
+    <color name="redDirt">#7F5217</color>
+    <color name="sepia">#7F462C</color>
+    <color name="orangeSalmon">#C47451</color>
+    <color name="rust">#C36241</color>
+    <color name="redFox">#C35817</color>
+    <color name="papayaOrange">#E56717</color>
+    <color name="halloweenOrange">#E66C2C</color>
+    <color name="pumpkinOrange">#F87217</color>
+    <color name="constructionConeOrange">#F87431</color>
+    <color name="sunriseOrange">#E67451</color>
+    <color name="mangoOrange">#FF8040</color>
+    <color name="basketBallOrange">#F88158</color>
+    <color name="tangerine">#E78A61</color>
+    <color name="beanRed">#F75D59</color>
+    <color name="valentineRed">#E55451</color>
+    <color name="shockingOrange">#E55B3C</color>
+    <color name="scarlet">#FF2400</color>
+    <color name="rubyRed">#F62217</color>
+    <color name="ferrariRed">#F70D1A</color>
+    <color name="fireEngineRed">#F62817</color>
+    <color name="lavaRed">#E42217</color>
+    <color name="loveRed">#E41B17</color>
+    <color name="grapefruit">#DC381F</color>
+    <color name="chestnutRed">#C34A2C</color>
+    <color name="cherryRed">#C24641</color>
+    <color name="mahogany">#C04000</color>
+    <color name="chiliPepper">#C11B17</color>
+    <color name="cranberry">#9F000F</color>
+    <color name="redWine">#990012</color>
+    <color name="burgundy">#8C001A</color>
+    <color name="bloodRed">#7E3517</color>
+    <color name="sangria">#7E3817</color>
+    <color name="firebrick">#800517</color>
+    <color name="plumPie">#7D0541</color>
+    <color name="velvetMaroon">#7E354D</color>
+    <color name="plumVelvet">#7D0552</color>
+    <color name="rosyFinch">#7F4E52</color>
+    <color name="puce">#7F5A58</color>
+    <color name="dullPurple">#7F525D</color>
+    <color name="khakiRose">#C5908E</color>
+    <color name="pinkBow">#C48189</color>
+    <color name="lipstickPink">#C48793</color>
+    <color name="rose">#E8ADAA</color>
+    <color name="desertSand">#EDC9AF</color>
+    <color name="pigPink">#FDD7E4</color>
+    <color name="cottonCandy">#FCDFFF</color>
+    <color name="pinkBubblegum">#FFDFDD</color>
+    <color name="flamingoPink">#F9A7B0</color>
+    <color name="pinkRose">#E7A1B0</color>
+    <color name="pinkDaisy">#E799A3</color>
+    <color name="cadillacPink">#E38AAE</color>
+    <color name="carnationPink">#F778A1</color>
+    <color name="blushRed">#E56E94</color>
+    <color name="watermelonPink">#FC6C85</color>
+    <color name="violetRed">#F6358A</color>
+    <color name="pinkCupcake">#E45E9D</color>
+    <color name="pinkLemonade">#E4287C</color>
+    <color name="neonPink">#F535AA</color>
+    <color name="brightNeonPink">#F433FF</color>
+    <color name="tulipPink">#C25A7C</color>
+    <color name="roguePink">#C12869</color>
+    <color name="burntPink">#C12267</color>
+    <color name="bashfulPink">#C25283</color>
+    <color name="violaPurple">#7E587E</color>
+    <color name="purpleIris">#571B7E</color>
+    <color name="plumPurple">#583759</color>
+    <color name="purpleMonster">#461B7E</color>
+    <color name="purpleHaze">#4E387E</color>
+    <color name="eggplant">#614051</color>
+    <color name="grape">#5E5A80</color>
+    <color name="purpleJam">#6A287E</color>
+    <color name="purpleFlower">#A74AC7</color>
+    <color name="purpleAmethyst">#6C2DC7</color>
+    <color name="purpleSageBush">#7A5DC7</color>
+    <color name="lovelyPurple">#7F38EC</color>
+    <color name="jasminePurple">#A23BEC</color>
+    <color name="purpleDaffodil">#B041FF</color>
+    <color name="crocusPurple">#9172EC</color>
+    <color name="purpleMimosa">#9E7BFF</color>
+    <color name="heliotropePurple">#D462FF</color>
+    <color name="purpleDragon">#C38EC7</color>
+    <color name="lilac">#C8A2C8</color>
+    <color name="blushPink">#E6A9EC</color>
+    <color name="mauve">#E0B0FF</color>
+    <color name="blossomPink">#F9B7FF</color>
+    <color name="periwinkle">#E9CFEC</color>
+    <color name="lavenderPinocchio">#EBDDE2</color>
+    <color name="pearl">#FDEEF4</color>
+    <color name="milkWhite">#FEFCFF</color>
 </resources>
