--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -1,14 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.LogInFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
-</FrameLayout>
+        <ImageView
+            android:layout_width="@dimen/welcome_screen_icon_size"
+            android:layout_height="@dimen/welcome_screen_icon_size"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/welcome_screen_text_icon_margin"
+            android:background="@drawable/ic_baseline_chat_24"
+            android:contentDescription="@string/app_name" />
+
+        <EditText
+            android:id="@+id/userName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
+            android:layout_marginVertical="@dimen/welcome_screen_button_margin"
+            android:autofillHints="emailAddress"
+            android:hint="@string/enter_email_mobile_user_name"
+            android:inputType="text" />
+
+        <EditText
+            android:id="@+id/logInPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
+            android:autofillHints="password"
+            android:hint="@string/enter_password"
+            android:inputType="textPassword" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/welcome_screen_text_icon_margin"
+            android:layout_marginTop="@dimen/login_screen_forgot_pass_margin"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/forgotPassword"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/login_screen_forgot_pass_margin"
+                android:layout_marginTop="@dimen/welcome_screen_text_icon_margin"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:text="@string/forgot_password"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/signUp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/welcome_screen_text_icon_margin"
+                android:layout_marginEnd="@dimen/login_screen_forgot_pass_margin"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:text="@string/new_here_sign_up"
+                android:textAlignment="textEnd"
+                android:textColor="@color/black" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/logInButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/welcome_screen_button_margin"
+            android:backgroundTint="@color/blueOrchid"
+            android:text="@string/log_in" />
+    </LinearLayout>
+
+</ScrollView>
